[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hp35stack"
version = "2.0"
readme = "README.md"
description = "HP35 Stack class (built for CNC - complex number calculator)"
authors = [
    { name = "Marc Donner", email = "marc.donner@gmail.com" },
    ]
requires-python = ">=3.9"

[tool.setuptools]
py-modules = ["hp35stack"]
